--- a/public/css/leaderBoard.css
+++ b/public/css/leaderBoard.css
@@ -14,7 +14,7 @@
     height: auto;
     max-height: 70vh;
     position: absolute;
-    top: 130px;
+    top: 140px;
     left: 50%;
     transform: translateX(-50%);
     border-radius: 15px;
@@ -108,7 +108,7 @@
         height: auto;
         max-height: 60vh;
         padding: 15px;
-        top: 120px;
+        top: 130px;
         left: 50%;
         transform: translateX(-50%);
         border-radius: 10px;
@@ -144,7 +144,7 @@
         height: auto;
         max-height: 55vh;
         padding: 10px;
-        top: 110px;
+        top: 120px;
     }
     
     #leaderBoardH1 {
